--- a/index.html
+++ b/index.html
@@ -7,16 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="con">
-        <div class="score">0</div>
-        <div class="question"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, explicabo.</div>
-        <div class="answers">
-            <div class="answer">1</div>
-            <div class="answer">2</div>
-            <div class="answer">3</div>
-            <div class="answer">4</div>
+  <div class="container">
+    <div class="mainMenu">
+        <div class="con">
+            <div class="score">0</div>
+            <div class="question"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, explicabo.</div>
+            <div class="answers">
+                <div class="answer">1</div>
+                <div class="answer">2</div>
+                <div class="answer">3</div>
+                <div class="answer">4</div>
+            </div>
         </div>
-    </div>
+       </div>
+        <div class="sideBar">
+            <ul>
+                <li>15</li>
+                <li>15</li>
+                <li>15</li>
+                <li>15</li>
+                <li>15</li>
+            </ul>
+        </div>
+  </div>
     <script src="app.js"></script>
 </body>
 </html>
